[bumpversion]
current_version = 0.0.3
commit = True
tag = True

[bumpversion:file:docs/conf.py]
search = release = "{current_version}"
replace = release = "{new_version}"

[bumpversion:file:tdsr/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[metadata]
description-file = README.rst

[flake8]
exclude = docs,.ipynb_checkpoints,deprecated
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[mypy]
files = tdsr
exclude = deprecated
plugins = numpy.typing.mypy_plugin
ignore_missing_imports = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
no_warn_unused_configs = true
warn_unused_configs = true
disallow_untyped_decorators = true

[tool:pytest]
addopts = --force-sugar -vv -n 0
testpaths = tests/
filterwarnings = 
	ignore::DeprecationWarning
	ignore::RuntimeWarning
