[bumpversion]
current_version = 0.0.6
commit = True
tag = True

[bumpversion:file:docs/conf.py]
search = release = "{current_version}"
replace = release = "{new_version}"

[bumpversion:file:tdsr/version.py]
search = version = "{current_version}"
replace = version = "{new_version}"

[bdist_wheel]
universal = 1

[metadata]
description_file = README.rst

[flake8]
exclude = docs,.ipynb_checkpoints,deprecated
max-line-length = 88
extend-ignore = E203

[mypy]
files = tdsr
exclude = deprecated
plugins = numpy.typing.mypy_plugin
ignore_missing_imports = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
no_warn_unused_configs = true
warn_unused_configs = true
disallow_untyped_decorators = true

[tool:pytest]
addopts = --force-sugar -vv -n 0
testpaths = tests/
filterwarnings = 
	ignore::DeprecationWarning
	ignore::RuntimeWarning
